# fastText

./: CMakeLists.txt  mycmds.txt
docs/: extra_notes.txt
redis/: CMakeLists.txt  redis_api.c
src/: args.cc  args.h  dictionary.cc  fasttext.cc  flow.txt  matrix.cc  matrix.h  model.cc  model.h  productquantizer.h  supervised_model.md  vector.cc
